[package]
name = "rustrc"
version = "0.1.0"
edition = "2021"

[features]
default = ["ssh"]
ssh = ["russh", "russh-keys"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
russh = { version = "0.43.0", optional = true }
russh-keys = { version = "0.43.0", optional = true }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
trait-variant = "0.1.2"
